--- a/views/file_upload.ejs
+++ b/views/file_upload.ejs
@@ -1,4 +1,4 @@
-<%- include partials/header.ejs %>
+<%- include partials/header-logged-in.ejs %>
 <div class="container">
 
   <div class="form-group">
