--- a/views/file_upload.ejs
+++ b/views/file_upload.ejs
@@ -10,10 +10,10 @@
       <input  class="form-control" type="text" name="room_name" placeholder="Nama Tempat" /><br />
         <label for="add room">Description</label>
       <textarea class="form-control" rows="4" name="description" placeholder="Input Description Rooms"></textarea><br />
-      <input class="form-control" type="text" name="lokasi" value="" placeholder="Lokasi"> <br />
+      <input  class="form-control" type="text" name="lokasi" value="" placeholder="Lokasi"> <br />
       <label class="form-group" for="file">Input file:</label>
       <input class="form-group" type="file" name="urlPath">
-      <input class="btn btn-success btn-lg" type="submit" name="sumbit" value="Create" />
+      <input class="btn btn-success" type="submit" name="sumbit" value="Create" />
       </form>
       </div>
     </div>
