--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,6 @@
 
 <div class="container">
 
-  <h3>Mencari Tempat Penginapan Jadi Lebih Cepat</h3>
-
-
 
   <% rooms.forEach(tampil=>{  %>
       <div class="col-md-6">
@@ -22,9 +19,9 @@
             <a href="#" class="btn btn-secondary">Masukkan ke keranjang</a>
 
     <div class="col-md4">
-      <a href="/edit/<%- tampil.id%>"><img src="/images/edit.png" alt="Edit"></a>
-      <a href="/rooms/delete/<%- tampil.id%>" onclick="return confirm('Are you sure want to delete this place?')"><img src="/images/delete.png" alt="Delete" height="30px" width="30px"></a>
-      <a href="/vote/<%- tampil.id%>"><img src="/images/fbheart.png" alt="Like"></a>&nbsp;&nbsp;
+      <a href="/rooms/edit/<%- tampil.id%>"><img src="/images/edit.png" alt="Edit" height="20px" width="20px"></a>
+      <a href="/rooms/delete/<%- tampil.id%>" onclick="return confirm('Are you sure want to delete this Room?')"><img src="/images/delete.png" alt="Delete" height="20px" width="20px"></a>
+      <a href="/vote/<%- tampil.id%>"><img src="/images/fblike.png" alt="Like" width="30px" height="30px"></a>&nbsp;&nbsp;
       <h4>
         <% if (tampil.Vote) { %>
             <%= tampil.Vote.count %>&nbsp;likes
