--- a/views/edit_room.ejs
+++ b/views/edit_room.ejs
@@ -1,4 +1,4 @@
-<%- include partials/header.ejs %>
+<%- include partials/header-logged-in.ejs %>
 
 <div class="container">
 
@@ -12,9 +12,9 @@
         <label for="add room">Description</label>
       <textarea class="form-control" rows="4" name="description"><%=dataRoom.description%></textarea><br />
       <input  class="form-control" type="text" name="lokasi" value="<%=dataRoom.lokasi%>" > <br />
-      <label class="form-group" for="file">Input file:</label>
+      <!-- <label class="form-group" for="file">Input file:</label>
       <img src="<%=dataRoom.imagePath %>" alt="">
-      <input class="form-group" type="file" name="urlPath">
+      <input class="form-group" type="file" name="imagePath"> -->
       <input class="btn btn-success" type="submit" name="sumbit" value="Update" />
       </form>
       </div>
