--- a/views/partials/header-logged-in.ejs
+++ b/views/partials/header-logged-in.ejs
@@ -55,18 +55,17 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/users/register">Register</a></li>
-          <li><a href="/users/login">Log In</a></li>
+        <li><a href="/users/">Add Rooms</a></li>
+          <li><a href="logout">Log Out</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-
     <div class="jumbotron">
       <h1>My Villa</h1>
       <p>Menyediakan villa dengan harga murah tapi bukan murahan</p>
-      <img src="/stylesheets/img/Villa-Puncak.jpg" height="250px" width="825px"alt="">
+      <img src="/stylesheets/img/Villa-Puncak.jpg" height="250px" width="100%"alt="">
       <!-- <p><a class="btn btn-primary btn-lg" href="/" role="button">Home</a></p> -->
     </div>
 
