--- a/views/partials/header-logged-in.ejs
+++ b/views/partials/header-logged-in.ejs
@@ -38,19 +38,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">MY VILLA</a>
+      <a class="navbar-brand" href="/">myRoom</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Tipe Villa <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Lokasi Villa</a></li>
+        <li class="active"><a href="#">myRoom <span class="sr-only">(current)</span></a></li>
+
 
       </ul>
-      <form class="navbar-form navbar-left" action="/cari_villa/">
+      <form class="navbar-form navbar-left" action="/getRoomById">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" name="lokasi" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
