--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -54,15 +54,15 @@ footer { background-color:#0c1a1e; min-height:350px; font-family: 'Open Sans', s
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6 footerleft ">
-        <div class="logofooter"> Logo</div>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-        <p><i class="fa fa-map-pin"></i> 210, Aggarwal Tower, Rohini sec 9, New Delhi -        110085, INDIA</p>
-        <p><i class="fa fa-phone"></i> Phone (India) : +91 9999 878 398</p>
-        <p><i class="fa fa-envelope"></i> E-mail : info@webenlance.com</p>
+        <div class="logofooter"> MY VILLA</div>
+        <p>MY VILLA adalah situs untuk para pemilik dan pencari akomodasi di berbagai daerah, saat ini My villa telah berhasil menghasilkan 1500 bentuk kerja sama antara para pemilik dan pencari Akomodasi</p>
+        <p><i class="fa fa-map-pin"></i> 210, Aggarwal Tower, Rohini sec 9, Jakarta Sealtan -        123310, INDONESIA</p>
+        <p><i class="fa fa-phone"></i> Phone (Indonesia) : +62 809 8 9999</p>
+        <p><i class="fa fa-envelope"></i> E-mail : info@myvilla.com</p>
 
       </div>
       <div class="col-md-2 col-sm-6 paddingtop-bottom">
-        <h6 class="heading7">GENERAL LINKS</h6>
+        <h6 class="heading7">Important Links</h6>
         <ul class="footer-ul">
           <li><a href="#"> Career</a></li>
           <li><a href="#"> Privacy Policy</a></li>
@@ -76,13 +76,13 @@ footer { background-color:#0c1a1e; min-height:350px; font-family: 'Open Sans', s
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
         <h6 class="heading7">LATEST POST</h6>
         <div class="post">
-          <p>facebook crack the movie advertisment code:what it means for you <span>August 3,2015</span></p>
-          <p>facebook crack the movie advertisment code:what it means for you <span>August 3,2015</span></p>
-          <p>facebook crack the movie advertisment code:what it means for you <span>August 3,2015</span></p>
+          <p>Jakarta - Polisi sudah memeriksa M, keponakan Muhtar Ependy, terkait kasus teror pen <span>May 13,2017</span></p>
+          <p>Bulukumba - Menteri Pemuda dan Olahraga, Imam Nahrawi, mengajak masyarakat berpartis <span>May 10,2017</span></p>
+          <p>Menpora sudah memulai kampanye Ayo Olahraga. Dengan hal itu, seluruh masyarakat diaj <span>May 7,2017</span></p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
-        <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-height="300" data-small-header="false" style="margin-bottom:15px;" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+        <div class="fb-page" data-href="https://www.facebook.com/MyVillaHomeDecor/" data-tabs="timeline" data-height="300" data-small-header="false" style="margin-bottom:15px;" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
           <div class="fb-xfbml-parse-ignore">
             <blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote>
           </div>
@@ -96,7 +96,7 @@ footer { background-color:#0c1a1e; min-height:350px; font-family: 'Open Sans', s
 <div class="copyright">
   <div class="container">
     <div class="col-md-6">
-      <p>© 2016 - All Rights with Webenlance</p>
+      <p>© 2017 - All Rights with MYVILLA</p>
     </div>
     <div class="col-md-6">
       <ul class="bottom_ul">
