--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -1,17 +1,31 @@
 <%- include partials/header.ejs %>
 <div class="container">
   <h5> <%= msg %> </h5>
-  <form class="form-group"  action="/users/login" method="post">
-    <h3>Masukkan Username dan Password</h3>
-    <br>
-    <input type="text" name="logUsername" placeholder="Username" value="">
-    <br><br>
-    <input  type="password" name="logPassword" placeholder="Password" value="">
-    <br><br>
-    <input type="submit" value="Sign In!">
 
-  </form>
+
+<form class="form-horizontal" action="/users/login" method="post">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">User name</label>
+    <div class="col-sm-10">
+      <input type="text" name="logUsername" class="form-control" id="inputEmail3" placeholder="Username">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" name="logPassword" class="form-control" id="inputPassword3" placeholder="Password">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
+</form>
+
 </div>
-
-</body>
-</html>
+<br>
+<br>
+<br>
+<%- include partials/footer.ejs %>
