--- a/views/regist-page.ejs
+++ b/views/regist-page.ejs
@@ -1,21 +1,72 @@
 <%- include partials/header.ejs %>
-<div class="container">
-  <h5><%=msg%></h5>
-  <br><br>
-  <form class="form-group"  action="/users/register" method="post">
-    <h3>Silahkan di isi dengan Valid!</h3>
-    <input type="text" name="newName" placeholder="Nama" value="">
-    <br><br>
-    <input  type="text" name="newUsername" placeholder="Username" value="">
-    <input  type="password" name="newPassword" placeholder="Password" value="">
-    <br><br>
-    <input  type="email" name="newEmail" placeholder="Email" value="">
-    <input  type="text" name="newTelp" placeholder="Telp" value="">
-    <br><br>
-    <input type="submit" value="Sign Up and Log In">
+<style media="screen">
+body{
+background-color: #525252;
+}
+.centered-form{
+margin-top: 60px;
+}
 
-  </form>
+.centered-form .panel{
+background: rgba(255, 255, 255, 0.8);
+box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+}
+</style>
+
+
+  <div class="container">
+        <div class="row centered-form">
+        <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+        	<div class="panel panel-default">
+        		<div class="panel-heading">
+			    		<h3 class="panel-title">Please sign up for myRoom <small>It's free!</small></h3>
+			 			</div>
+			 			<div class="panel-body">
+			    		<form role="form" action="/users/register" method="post">
+			    			<div class="row">
+			    				<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			                <input type="text" name="newName" id="first_name" class="form-control input-sm" placeholder="Full Name">
+			    					</div>
+			    				</div>
+			    				<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    						<input type="text" name="newUsername" id="last_name" class="form-control input-sm" placeholder="Username">
+			    					</div>
+			    				</div>
+			    			</div>
+
+			    			<div class="form-group">
+			    				<input type="email" name="newEmail" id="email" class="form-control input-sm" placeholder="Email Address">
+			    			</div>
+
+                <div class="form-group">
+ 			    				<input type="text" name="newTelp"  class="form-control input-sm" placeholder="Telephone">
+ 			    			</div>
+
+
+			    			<div class="row">
+			    				<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    						<input type="password" name="newPassword" id="password" class="form-control input-sm" placeholder="Password">
+			    					</div>
+			    				</div>
+			    			</div>
+
+			    			<input type="submit" value="Register" class="btn btn-info btn-block">
+
+			    		</form>
+			    	</div>
+	    		</div>
+    		</div>
+    	</div>
+    </div>
+
+
+
 </div>
+<br>
+<br>
+<br>
 
-</body>
-</html>
+<%- include partials/footer.ejs %>
