--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,7 +65,7 @@
 
     <div class="jumbotron">
       <h1>myRoom</h1>
-      <p>Menyediakan penginapan dengan harga murah tapi bukan murahan</p>
+      <p>Menyediakan penginapan dengan harga murah tapi bukan murahan!!</p>
       <img src="/stylesheets/img/Villa-Puncak.jpg" height="250px" width="825px"alt="">
       <!-- <p><a class="btn btn-primary btn-lg" href="/" role="button">Home</a></p> -->
     </div>
