--- a/views/partials/header-logged-in.ejs
+++ b/views/partials/header-logged-in.ejs
@@ -48,9 +48,9 @@
         <li><a href="#">Lokasi Villa</a></li>
 
       </ul>
-      <form class="navbar-form navbar-left" action="/cari_villa/">
+      <form class="navbar-form navbar-left" action="/users/cari_kamar/">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" name="key" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
