--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,14 +47,14 @@
         <li class="active"><a href="#">Tipe Villa <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Lokasi Villa</a></li>
 
-      </ul>
+      <!-- </ul>
       <form class="navbar-form navbar-left" action="/cari_villa/">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right"> -->
         <!-- <li><a href="/users/">Add Rooms</a></li> -->
         <li><a href="/users/register">Register</a></li>
           <li><a href="/users/login">Log In</a></li>
