--- a/views/partials/header-logged-in.ejs
+++ b/views/partials/header-logged-in.ejs
@@ -48,9 +48,9 @@
 
 
       </ul>
-      <form class="navbar-form navbar-left" action="/getRoomById">
+      <form class="navbar-form navbar-left" action="/users/cari_kamar">
         <div class="form-group">
-          <input type="text" class="form-control" name="lokasi" placeholder="Search">
+          <input type="text" class="form-control" name="key" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
